# GPU-Computing-SDK-4.2.9

./: Documentation.html  Makefile  README.md
C/: Makefile  Samples.html
CUDALibraries/common/UtilNPP/: CMakeLists.txt  Exceptions.cpp  Exceptions.h  Image.cpp  Image.h  ImageAllocatorsCPU.h  ImageAllocatorsNPP.h  ImageIO.cpp  ImageIO.h  ImagePacked.h  ImagesCPU.h  ImagesNPP.h  Makefile  Pixel.h  Signal.cpp  Signal.h  SignalAllocatorsCPU.h  SignalAllocatorsNPP.h  SignalsCPU.h  SignalsNPP.h  StopWatch.h  StopWatchBase.h  StopWatchBase.inl  StopWatchLinux.cpp  StopWatchLinux.h  StopWatchWin.cpp  StopWatchWin.h  UtilNPP.mk  defines.mk
CUDALibraries/src/: CMakeLists.txt
CUDALibraries/src/MersenneTwisterGP11213/: Makefile  MersenneTwister.cpp
CUDALibraries/src/MonteCarloCURAND/: Makefile
CUDALibraries/src/MonteCarloCURAND/EstimatePiInlineP/: Makefile
CUDALibraries/src/MonteCarloCURAND/EstimatePiInlineQ/: Makefile
CUDALibraries/src/batchCUBLAS/: Makefile  batchCUBLAS.cpp  batchCUBLAS.h
CUDALibraries/src/boxFilterNPP/: Makefile  boxFilterNPP.cpp
CUDALibraries/src/conjugateGradient/: Makefile  main.cpp
CUDALibraries/src/conjugateGradientPrecond/: Makefile  main.cpp
CUDALibraries/src/freeImageInteropNPP/: Makefile  freeImageInteropNPP.cpp
CUDALibraries/src/grabcutNPP/: GrabCut.cpp  GrabCut.h  GrabcutGMM.cu  GrabcutMain.cpp  GrabcutUtil.cu  Makefile
CUDALibraries/src/histEqualizationNPP/: Makefile  histEqualizationNPP.cpp
CUDALibraries/src/imageSegmentationNPP/: Makefile  imageSegmentationNPP.cpp
CUDALibraries/src/randomFog/: Makefile  randomFog.cpp  rng.cpp  rng.h
CUDALibraries/src/simpleCUBLAS/: Makefile  simpleCUBLAS.cpp
CUDALibraries/src/simpleCUFFT/: Makefile  simpleCUFFT.cu
shared/: common.mk
(+70 files in other folders)
