add_subdirectory(boxFilterNPP)
add_subdirectory(freeImageInteropNPP)
add_subdirectory(histEqualizationNPP)
add_subdirectory(imageSegmentationNPP)
add_subdirectory(grabcutNPP)
add_subdirectory(batchCUBLAS)
add_subdirectory(conjugateGradient)
add_subdirectory(conjugateGradientPrecond)
add_subdirectory(MersenneTwisterGP11213)
add_subdirectory(randomFog)
add_subdirectory(MonteCarloCURAND)
add_subdirectory(MonteCarloCURAND/EstimatePiInlineP)
add_subdirectory(MonteCarloCURAND/EstimatePiInlineQ)
add_subdirectory(MonteCarloCURAND/EstimatePiP)
add_subdirectory(MonteCarloCURAND/EstimatePiQ)
add_subdirectory(MonteCarloCURAND/SingleAsianOptionP)
add_subdirectory(simpleCUBLAS)
add_subdirectory(simpleCUFFT)
